# devfs-snapshot-python

./: README.md  devss.py  pyproject.toml
