[tool.poetry]
name = "devfs-snapshot-python"
version = "0.1.0"
description = ""
authors = ["Cologler <skyoflw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ftputil = "^5.0.1"
fsoopify = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
